--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 test-carroll:
   stage: scrape-carroll
   script:
-  - python -V
+  - python3 -V
   - python dataScrape.py andy-carroll 48066
 #test-lanzini:
 #  stage: scrape-lanzini
