--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 test-carroll:
   stage: scrape-carroll
   script:
-  - apt-get install python-pip
+  - easy_install pip
   - python3 -V
   - pip install requests
   - python3 dataScrape.py andy-carroll 48066
