Add TODOs to README and revert to working pipeline config (will fix on a branch)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,11 @@ stages:
 test-carroll:
   stage: scrape-carroll
   script:
-  - easy_install pip
+#  - easy_install pip
   - python3 -V
-  - pip install requests
-  - python3 dataScrape.py andy-carroll 48066
+#  - pip install requests
+#  - python3 dataScrape.py andy-carroll 48066
+  - python3 testPipeline.py 
 #test-lanzini:
 #  stage: scrape-lanzini
 #  script:
