--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,9 @@ test-carroll:
   script:
 #  - easy_install pip
   - python3 -V
-#  - pip install requests
+  - pip3 install requests
   - python3 dataScrape.py andy-carroll 48066
-#  - python3 testPipeline.py 
+#  - python3 testPipeline.py
 #test-lanzini:
 #  stage: scrape-lanzini
 #  script:
